[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/notification_message.gd" type="Script" id=1]

[node name="NotificationMessage" type="Control"]
margin_right = 500.0
margin_bottom = 100.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 500.0
margin_bottom = 100.0

[node name="CloseButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
text = "X"

[node name="TextContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -45.0
margin_bottom = -10.0

[node name="MessageRichText" type="RichTextLabel" parent="TextContainer"]
margin_right = 445.0
margin_bottom = 80.0
text = "Sample "
